[package]
name = "bibparser"
version = "0.3.1"
edition = "2021"
authors = ["tajpulo"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/typho/bibparser"
keywords = ["biblatex", "biber", "latex", "tex"]
categories = ["encoding", "parser-implementations", "text-processing"]
description = "A parser for .bib files"

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
